--- a/lmmworkshop.Rmd
+++ b/lmmworkshop.Rmd
@@ -6,14 +6,14 @@ output:
   md_document:
     variant: markdown_github
     toc: true
-    toc_depth: 6
+    toc_depth: 1
     number_sections: true
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-### Load packages
+# Load packages
 ```{r load packages, message=FALSE, warning=FALSE, paged.print=FALSE}
 # load the packages and source functions
 library(dplyr)
@@ -26,7 +26,7 @@ source("helper_functions/simulateData.R")
 options(scipen=5)
 ```
 
-### Simulate data
+# Simulate data
 
 ```{r simulate Data}
 # set.seed
@@ -47,7 +47,7 @@ df<-my_sim_data(
 # show first row of simulated data
 head(df)
 ```
-### Aggregate  
+# Aggregate  
 
 ```{r aggregate}
 # We are assuming that RT are normally distributed
@@ -72,7 +72,7 @@ summary(linearmod)
 
 ```
 
-### Unconditional model, random intercepts
+# Unconditional model, random intercepts
 
 ```{r lmmr rand int}
 
@@ -89,7 +89,7 @@ paste("The IntraClass Correlation is",  ICC)
 
 ```
 
-### Test significance of random intercepts
+# Test significance of random intercepts
 
 ```{r rand int test sig}
 
@@ -102,7 +102,7 @@ mixmod_unc<-lmer(RT~1+(1|subj_id), data = df)
 
 anova(mixmod_unc, mod_unc)
 ```
-### Simulation-based LRT
+# Simulation-based LRT
 
 ```{r sim based test}
 # use simulation based-test
@@ -110,7 +110,7 @@ exactLRT(mixmod_unc,mod_unc)
 
 
 ```
-### Maximal model
+# Maximal model
 
 ``` {r maximal}
 
@@ -127,7 +127,7 @@ summary(maxMod)
 
 anova(maxMod)
 ```
-### Centering
+# Centering
 
 
 ``` {r centering}
@@ -149,7 +149,7 @@ maxModCent<-lmer(RT~PE.cwc+PE.cmc+(1+PE.cwc|subj_id), data = df, control=lmerCon
 summary(maxModCent)
 
 ```
-### How much variance does our predictor explain on level 1 and 2
+# How much variance does our predictor explain on level 1 and 2
 
 ```{r Calculating R2pseudo between, within and between-within}
 
@@ -175,7 +175,7 @@ summary(ModPE)
 
 ```
 
-### Model selection backward
+# Model selection backward
 ``` {r model selection backward}
 
 # fit a model with covariance of random effects set at zero
@@ -204,7 +204,7 @@ anova(maxMod, maxModZeroCov )
 
 
 ```
-### Categorical predictor between
+# Categorical predictor between
 
 ``` {r categorical predictor between}
 
@@ -248,7 +248,7 @@ summary(bwlm)
 anova(bwlm)
 
 ```
-### Setting contrasts
+# Setting contrasts
 
 ``` {r setting contrasts}
 # method 1: contrast poly
@@ -275,7 +275,7 @@ summary(bwlmContrCust)
           
 ```
 
-### Continuous predictor between
+# Continuous predictor between
 
 ``` {r continuous predictor between}
 
@@ -302,7 +302,7 @@ bwlmC<-lm(RT~PEbwC, data=df_agg)
 summary(bwlmC)
 
 ```
-### Categorical predictor within. EZ
+# Categorical predictor within. EZ
 
 ``` {r categorical predictor within ez}
 
@@ -332,7 +332,7 @@ ezModel<-ezANOVA(data = df_aggbw, # dataframe
 
 ezModel
 ```
-### Categorical predictor within: mixed-effects
+# Categorical predictor within: mixed-effects
 
 ``` {r categorical predictor within mixed-effects}
 
@@ -352,7 +352,7 @@ summary(test.lme)
 test.lme
 ```
 
-### excercise2
+# excercise2
 
 ```{r  exercise2 contrasts for within lmm}
 # contr. poly
